
build loop
======================

ArtifactsPublisher
---------------------
* Add option to move instead of copy artifacts which can save time (CC-833). Patch by Grzegorz Oledzki.

BuildStatus
---------------------
* Add attribute 'vetoIfFailing'. Will abort the build if the project being monitored had the last build fail (CC-842).

CompositeBuilder
---------------------
* Improve processing of build results to make it faster with large log files (CC-826). Patch by David Webster.

CruiseControlConfig
---------------------
* LabelIncrementers are no longer special cased, they are now treated like any other plugin. They must now be added to a project to get a non-default label incrementer and they can be registered with any name; are no longer forced to be named 'labelincrementer'. You can no longer set the labelincrementer classname via JMX. This change is not backwards compatible for users that were registering an alternative label incrementer but not placing the <labelincrementer> element in each project.

CVS
---------------------
* Add attribute "skipEmailsFetching" for people who don't have CVSROOT/users and don't want the (harmless) messages in the log when that file isn't found (CC-841). Patch by Grzegorz Oledzki
* Add attribute 'recurseLocalWorkingCopy' which allows localWorkingCopy to point at a directory not under version control; reduces effort when project has multiple projects in parallel directories under a non-versioned root (CC-820). Based on patch by Detlef Keil.

Darcs
---------------------
* Fix Darcs support (CC-847). Patch by Marc Fontaine.

DateFormat
---------------------